// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown Options Query Given a request for asset options should generate the correct request 1`] = `
{
  "data": {
    "search": {
      "query": "asset",
    },
  },
  "headers": undefined,
  "method": "POST",
  "url": "/api/datasources/proxy/6/cdf-api-key/api/v1/projects/TestProject/assets/search",
}
`;

exports[`Dropdown Options Query Given a request for asset options should return the assets with asset in their name 1`] = `
[
  {
    "description": "test asset 1",
    "externalId": "asset 1",
    "id": 123,
    "label": "asset 1",
    "value": "123",
  },
  {
    "description": "test asset 2",
    "externalId": "asset 2",
    "id": 456,
    "label": "asset 2",
    "value": "456",
  },
  {
    "description": "test asset 3",
    "externalId": "asset 3",
    "id": 789,
    "label": "asset 3",
    "value": "789",
  },
]
`;

exports[`Dropdown Options Query Given a request for asset options with additional options should generate the correct request 1`] = `
{
  "data": {
    "search": {
      "query": "asset",
    },
  },
  "headers": undefined,
  "method": "POST",
  "url": "/api/datasources/proxy/6/cdf-api-key/api/v1/projects/TestProject/assets/search?metadata=%7B%22key1%22%3A%22value1%22%7D",
}
`;

exports[`Dropdown Options Query Given a request for asset options with additional options should return the assets with asset in their name and metadata.key1 = value1 1`] = `
[
  {
    "description": "test asset 1",
    "externalId": "asset 1",
    "id": 123,
    "label": "asset 1",
    "value": "123",
  },
]
`;

exports[`Dropdown Options Query Given a request for timeseries options should generate the correct request 1`] = `
{
  "data": {
    "search": {
      "query": "Timeseries",
    },
  },
  "headers": undefined,
  "method": "POST",
  "url": "/api/datasources/proxy/6/cdf-api-key/api/v1/projects/TestProject/timeseries/search",
}
`;

exports[`Dropdown Options Query Given a request for timeseries options should return timeseries with Timeseries in their name 1`] = `
[
  {
    "description": "testA",
    "externalId": "Timeseries1",
    "id": 1,
    "label": "Timeseries1",
    "value": "1",
  },
  {
    "description": "testB",
    "externalId": "Timeseries2",
    "id": 2,
    "label": "Timeseries2",
    "value": "2",
  },
  {
    "description": "testC",
    "externalId": "Timeseries3",
    "id": 3,
    "label": "Timeseries3",
    "value": "3",
  },
  {
    "description": "testD",
    "externalId": "Timeseries4",
    "id": 4,
    "label": "Timeseries4",
    "value": "4",
  },
  {
    "description": "testE",
    "externalId": "Timeseries5",
    "id": 5,
    "label": "Timeseries5",
    "value": "5",
  },
]
`;

exports[`Dropdown Options Query Given an empty request for asset options should generate the correct request 1`] = `
{
  "data": {},
  "headers": undefined,
  "method": "POST",
  "url": "/api/datasources/proxy/6/cdf-api-key/api/v1/projects/TestProject/assets/search",
}
`;

exports[`Dropdown Options Query Given an empty request for asset options should return all assets 1`] = `
[
  {
    "description": "test asset 1",
    "externalId": "asset 1",
    "id": 123,
    "label": "asset 1",
    "value": "123",
  },
  {
    "description": "test asset 2",
    "externalId": "asset 2",
    "id": 456,
    "label": "asset 2",
    "value": "456",
  },
  {
    "description": "test asset 3",
    "externalId": "asset 3",
    "id": 789,
    "label": "asset 3",
    "value": "789",
  },
  {
    "description": "bar",
    "externalId": "foo",
    "id": 999,
    "label": "foo",
    "value": "999",
  },
]
`;

exports[`Dropdown Options Query Given an empty request for timeseries options should generate the correct request 1`] = `
{
  "data": {},
  "headers": undefined,
  "method": "POST",
  "url": "/api/datasources/proxy/6/cdf-api-key/api/v1/projects/TestProject/timeseries/search",
}
`;

exports[`Dropdown Options Query Given an empty request for timeseries options should return all timeseries 1`] = `
[
  {
    "description": "testA",
    "externalId": "Timeseries1",
    "id": 1,
    "label": "Timeseries1",
    "value": "1",
  },
  {
    "description": "testB",
    "externalId": "Timeseries2",
    "id": 2,
    "label": "Timeseries2",
    "value": "2",
  },
  {
    "description": "testC",
    "externalId": "Timeseries3",
    "id": 3,
    "label": "Timeseries3",
    "value": "3",
  },
  {
    "description": "testD",
    "externalId": "Timeseries4",
    "id": 4,
    "label": "Timeseries4",
    "value": "4",
  },
  {
    "description": "testE",
    "externalId": "Timeseries5",
    "id": 5,
    "label": "Timeseries5",
    "value": "5",
  },
  {
    "description": undefined,
    "externalId": "Test",
    "id": 6,
    "label": "Test",
    "value": "6",
  },
]
`;
